# dockman

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  dockman-0.1.0-1-x86_64.pkg.tar.zst  dockman-debug-0.1.0-1-x86_64.pkg.tar.zst  launcher.sh  list_icons.sh
dockman/: FETCH_HEAD  config  packed-refs
dockman/objects/pack/: pack-2cb46bb372e36e440f5cfcad7557e076b74d7965.idx  pack-2cb46bb372e36e440f5cfcad7557e076b74d7965.pack  pack-2cb46bb372e36e440f5cfcad7557e076b74d7965.rev  pack-b7432ef6320cfb40135f3107a32a3e7c925ff497.idx  pack-b7432ef6320cfb40135f3107a32a3e7c925ff497.rev
dockman/refs/heads/: master
pkg/dockman/: .BUILDINFO  .MTREE  .PKGINFO
pkg/dockman-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/: cache.rs  handlers.rs  lib.rs  main.rs  modules.rs  render.rs
src/modules/: context_menu.rs  font.rs  handlers.rs  icon.rs  icon_resolver.rs  indexer.rs  persistence.rs  render.rs  window_manager.rs  world.rs
src/services/: monitor.rs  test.rs
