[package]
name = "dockman"
version = "1.1.0"
edition = "2021"
default-run = "dockman"

[[bin]]
name = "test"
path = "src/services/test.rs"

[[bin]]
name = "monitor"
path = "src/services/monitor.rs"

[lib]
name = "dockman_lib"
path = "src/lib.rs"

[dependencies]
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }
smithay-client-toolkit = { version = "0.20.0" }

wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }

sysinfo = "0.33"

# Add this for your static caching maps:
lazy_static = "1.5.0"

# Add your image lookup dependencies from your proof-of-concept scripts:
linicon = "2.3"
image = "0.25"
base64 = "0.22" # Required to encode the binary image bytes over the terminal stream
sixel-rs = "0.5.0"
icy_sixel = "0.5.0"
walkdir = "2.5.0"
resvg = "0.47.0"
fontdue = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.4"
dirs = "6.0.0"
